fix(devis cote): suppression overflow

--- a/static/devis/css/devis_affichage_cote.css
+++ b/static/devis/css/devis_affichage_cote.css
@@ -42,6 +42,8 @@
 .row-piece-devis-recap {
     margin-bottom: 10px;
     padding-left: 10%;
+    margin-left: 0 !important;
+    margin-right : 0 !important;
 }
 
 .piece-details {
